# vulkan_engine

./: .gitignore  .gitmodules  CMakeLists.txt  todo
include/: app.h  buffer_utils.h  camera.h  command_buffer_manager.h  debug_logger_utils.h  depth_image.h  descriptors.h  device_setup.h  framebuffer_manager.h  geometry_structs.h  image_utils.h  input_manager.h  instance_setup.h  ivr_app.h  ivr_engine.h  ivr_path.h  ivr_window.h  light.h  light_manager.h  material.h  material_instance.h  model.h  pipeline_config.h  pipeline_creator.h  pipeline_manager.h  renderobject.h  renderpass.h  shadow_map.h  shadowmap_material.h  simple_file_reader.h  singlecommand_utils.h  swapchain_manager.h  sync_objects_manager.h  texture.h  texture_2d.h  texture_cube.h  texture_depth.h  ub_structs.h  uniform_buffer_manager.h  world.h  (+1 more)
scene/: base_materials.json  lights.json  materials.json  objects.json
shaders/: compile_shaders.bat  compile_shaders.sh  cubemap.frag  cubemap.vert  frag.spv  shader.frag  shader.vert  shadow_map.frag  shadow_map.vert  simple_texture_mapped.frag  simple_texture_mapped.vert  vert.spv  vert1.spv
src/: app.cpp  camera.cpp  command_buffer_manager.cpp  debug_logger_utils.cpp  depth_image.cpp  descriptors.cpp  device_setup.cpp  framebuffer_manager.cpp  input_manager.cpp  instance_setup.cpp  ivr_app.cpp  ivr_engine.cpp  ivr_window.cpp  light.cpp  light_manager.cpp  material.cpp  material_instance.cpp  material_rename.cpp  model.cpp  pipeline_creator.cpp  pipeline_manager.cpp  renderobject.cpp  renderpass.cpp  shadow_map.cpp  shadowmap_material.cpp  texture.cpp  (+8 more)
